# environment

./: Cargo.toml  booths.js  index2.html  intro.html  script4.js  style3.css
.github/workflows/: jekyll-gh-pages.yml  static.yml
index/: makebooth.js  script.js  style.css
src/: lib.rs
