[package]
name = "wasmr"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Element", "Node", "EventTarget","console", "Location", "UrlSearchParams", "CssStyleDeclaration"] }
